--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     div.row 
     hello,world;
     sasdasdas
-    <h1 style="color: aqua;">salam</h1>
+    <h1 style="color: red;">salam</h1>
 </body>
 </html>
