--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
-!adsdfdssssssssc
-d
-vg
-d
-f
-vg
-df
-gv
-df
-b
-gdf
-b
-
-fgg
-b
-f
-b
-g
-b
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=d, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>aria</h1>
+</body>
+</html>
